--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "leaflet": "^1.9.4",
     "mysql": "^2.18.1",
+    "ol": "^9.2.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
